tests/exec/assert-ne.stderr
At line 1.1 Assertion failed left != right:
left:  "foo"
right: "foo"

Error occurred.
