tests/exec/assert-ne.exec
cmd: load assert-ne.ecl
status: 1
